[tool.poetry]
name = "asyncpow"
version = "0.4.2"
description = "Asynchronous Python Overseerr Wrapper"
authors = ["Steven Marks - TotalDebug"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/totaldebug/asyncpow"
repository = "https://github.com/totaldebug/asyncpow"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["wled", "api", "async", "client"]
maintainers = ["Steven Marks - TotalDebug"]
packages = [{ include = "asyncpow" }]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
cachetools = "^5.3.3"
backoff = "^2.2.1"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.3.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
flake8 = "^7.0.0"
interrogate = "^1.5.0"
autoflake = "^2.3.1"
ipykernel = "^6.29.3"
nox = "^2024.3.2"
bandit = "^1.7.8"
sphinx = "^7.2.6"
sphinx-argparse = "^0.4.0"
sphinx-autobuild = "^2024.2.4"
sphinx-rtd-theme = "^2.0.0"
sphinx-toolbox = "^3.5.0"
toml = "^0.10.2"
myst-parser = "^2.0.0"
types-cachetools = "^5.3.0.7"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .nox
    | .venv
    | .cache
    | node_modules
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
  )/
)
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = [
    "node_modules",
    "build",
    ".cache",
    ".nox",
    ".mypy_cache",
    "__pycache__"
]

[tool.isort]
profile = "black"
line_length = 100
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = ["asyncpow", "tests"]
forced_separate = ["tests"]
skip = [".cache", ".nox"]
combine_as_imports = true

[tool.autoflake]
check = true
remove-unused-variables = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", ".devcontainer", ".nox", ".cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
color = true
